# pending

./: .gitignore  README.md  app.py  build_dataset.py  convert_to_parquet.py  create_dummy_model.py  files.txt  pyproject.toml  validate_model.py
.claude/: settings.local.json
models/bara_v0/: feature_names.json  metrics.json  model.txt
src/pending_delay/: config.py  schema.py
src/pending_delay/evaluation/: metrics.py  ope.py  simulate.py
src/pending_delay/features/: engineering.py  target.py
src/pending_delay/model/: calibrate.py  train.py
src/pending_delay/ui/: __init__.py  _loader.py  tab_comparison.py  tab_review.py  tab_segments.py  tab_tier_simulator.py  tab_validation.py
